# whisper

./: .gitignore  CMakeLists.txt
src/: Client.h  Connection.cpp  Connection.h  Header.cpp  Header.h  Message.h  Messageable.cpp  Messageable.h  Server.h  ipc_error.cpp  ipc_error.h
